# Perchik

Perceptron/: CMakeLists.txt
Perceptron/Matrix/: Matrix.cpp  Matrix.h
Perceptron/NetWork/: NetWork.cpp  NetWork.h
Perceptron/Perceptron/: Perceptron.cpp
Perceptron/ReadingData/: ReadingData.cpp  ReadingData.h
